--- a/admin/index.html
+++ b/admin/index.html
@@ -107,21 +107,7 @@
                 <!--== LEFT MENU ==-->
                 <div class="sb2-13">
                     <ul class="collapsible" data-collapsible="accordion">
-                        <li><a href="pages/index-2.html" class="menu-active"><i class="fa fa-bar-chart" aria-hidden="true"></i> Dashboard</a>
-                        </li>
-                        <li><a href="javascript:void(0)" class="collapsible-header"><i class="fa fa-list-ul" aria-hidden="true"></i> Listing</a>
-                            <div class="collapsible-body left-sub-menu">
-                                <ul>
-                                    <li><a href="pages/listing-all.html">All listing</a>
-                                    </li>
-                                    <li><a href="pages/listing-add.html">Add New listing</a>
-                                    </li>
-                                    <li><a href="pages/listing-cat-all.html">All listing Categories</a>
-                                    </li>
-                                    <li><a href="pages/listing-cat-add.html">Add listing Categories</a>
-                                    </li>
-                                </ul>
-                            </div>
+                        <li><a href="index.html" class="menu-active"><i class="fa fa-bar-chart" aria-hidden="true"></i> Dashboard</a>
                         </li>
                         <li><a href="javascript:void(0)" class="collapsible-header"><i class="fa fa-user" aria-hidden="true"></i> Users</a>
                             <div class="collapsible-body left-sub-menu">
@@ -147,76 +133,12 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a href="javascript:void(0)" class="collapsible-header"><i class="fa fa-h-square" aria-hidden="true"></i> Hotels</a>
-                            <div class="collapsible-body left-sub-menu">
-                                <ul>
-                                    <li><a href="pages/hotel-all.html">All Hotels</a>
-                                    </li>
-                                    <li><a href="pages/hotel-add.html">Add New Hotel</a>
-                                    </li>
-                                    <li><a href="pages/hotel-room-type-all.html">Room Type</a>
-                                    </li>
-                                    <li><a href="pages/hotel-room-type-add.html">Add Room Type</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li><a href="javascript:void(0)" class="collapsible-header"><i class="fa fa-picture-o" aria-hidden="true"></i> Sight Seeings</a>
-                            <div class="collapsible-body left-sub-menu">
-                                <ul>
-                                    <li><a href="pages/sight-see-all.html">All Sight Seeings</a>
-                                    </li>
-                                    <li><a href="pages/sight-see-add.html">Add New Sight Seeing</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li><a href="javascript:void(0)" class="collapsible-header"><i class="fa fa-calendar-o" aria-hidden="true"></i> Events</a>
-                            <div class="collapsible-body left-sub-menu">
-                                <ul>
-                                    <li><a href="pages/event-all.html">All Events</a>
-                                    </li>
-                                    <li><a href="pages/event-add.html">Add New Event</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li><a href="javascript:void(0)" class="collapsible-header"><i class="fa fa-braille" aria-hidden="true"></i> Ui-Kits</a>
-                            <div class="collapsible-body left-sub-menu">
-                                <ul>
-                                    <li><a href="pages/ui-form.html">ui-form</a>
-                                    </li>
-                                    <li><a href="pages/ui-kit.html">ui-kit</a>
-                                    </li>
-                                    <li><a href="pages/ui-table.html">ui-table</a>
-                                    </li>
-                                    <li><a href="pages/ui-pre-load.html">ui-pre-load</a>
-                                    </li>
-                                    <li><a href="pages/ui-tab.html">ui-tab</a>
-                                    </li>
-                                    <li><a href="pages/ui-icons.html">ui-icons</a>
-                                    </li>
-                                    <li><a href="pages/ui-collapsible.html">ui-collapsible</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
                         <li><a href="javascript:void(0)" class="collapsible-header"><i class="fa fa-usd" aria-hidden="true"></i> Discounts</a>
                             <div class="collapsible-body left-sub-menu">
                                 <ul>
                                     <li><a href="pages/discount.html">All Discounts</a>
                                     </li>
                                     <li><a href="pages/discount-add.html">Add New Discounts</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li><a href="javascript:void(0)" class="collapsible-header"><i class="fa fa-tags" aria-hidden="true"></i> Offers</a>
-                            <div class="collapsible-body left-sub-menu">
-                                <ul>
-                                    <li><a href="pages/offers.html">All Offers</a>
-                                    </li>
-                                    <li><a href="pages/offers-add.html">Add New Offers</a>
                                     </li>
                                 </ul>
                             </div>
@@ -235,19 +157,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a href="javascript:void(0)" class="collapsible-header"><i class="fa fa-rss" aria-hidden="true"></i> Blog & Articals</a>
-                            <div class="collapsible-body left-sub-menu">
-                                <ul>
-                                    <li><a href="pages/blog-all.html">All Blogs</a>
-                                    </li>
-                                    <li><a href="pages/blog-add.html">Add Blog</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li><a href="pages/social-media.html"><i class="fa fa-plus-square-o" aria-hidden="true"></i> Social Media</a>
-                        </li>
-                        <li><a href="pages/login.html" target="_blank"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+                        <li><a href="pages/login.html" target="_blank"><i class="fa fa-sign-in" aria-hidden="true"></i>Login</a>
                         </li>
                     </ul>
                 </div>
