--- a/admin/index.html
+++ b/admin/index.html
@@ -39,7 +39,7 @@
             <div class="col-md-2 col-sm-3 col-xs-6 sb1-1">
                 <a href="#" class="btn-close-menu"><i class="fa fa-times" aria-hidden="true"></i></a>
                 <a href="#" class="atab-menu"><i class="fa fa-bars tab-menu" aria-hidden="true"></i></a>
-                <a href="pages/index-2.html" class="logo"><img src="images/logo1.png" alt="" />
+                <a href="index.html" class="logo"><img src="images/logo1.png" alt="" />
                 </a>
             </div>
             <!--== SEARCH ==-->
@@ -51,11 +51,11 @@
             </div>
             <!--== NOTIFICATION ==-->
             <div class="col-md-2 tab-hide">
-                <div class="top-not-cen">
-                    <a class='waves-effect btn-noti' href='#'><i class="fa fa-commenting-o" aria-hidden="true"></i><span>5</span></a>
-                    <a class='waves-effect btn-noti' href='#'><i class="fa fa-envelope-o" aria-hidden="true"></i><span>5</span></a>
-                    <a class='waves-effect btn-noti' href='#'><i class="fa fa-tag" aria-hidden="true"></i><span>5</span></a>
-                </div>
+<!--                <div class="top-not-cen">-->
+<!--                    <a class='waves-effect btn-noti' href='#'><i class="fa fa-commenting-o" aria-hidden="true"></i><span>5</span></a>-->
+<!--                    <a class='waves-effect btn-noti' href='#'><i class="fa fa-envelope-o" aria-hidden="true"></i><span>5</span></a>-->
+<!--                    <a class='waves-effect btn-noti' href='#'><i class="fa fa-tag" aria-hidden="true"></i><span>5</span></a>-->
+<!--                </div>-->
             </div>
             <!--== MY ACCCOUNT ==-->
             <div class="col-md-2 col-sm-3 col-xs-6">
@@ -146,14 +146,12 @@
                         <li><a href="javascript:void(0)" class="collapsible-header"><i class="fa fa-ticket" aria-hidden="true"></i> Booking & Enquiry</a>
                             <div class="collapsible-body left-sub-menu">
                                 <ul>
-                                    <li><a href="pages/hotel-booking-all.html">Hotel</a>
+                                    <li><a href="pages/package-booking-all.html">Book</a>
                                     </li>
-                                    <li><a href="pages/package-booking-all.html">Package</a>
-                                    </li>
-                                    <li><a href="pages/sight-see-booking-all.html">Sight Seeings</a>
-                                    </li>
-                                    <li><a href="pages/event-booking-all.html">Events</a>
-                                    </li>
+<!--                                    <li><a href="pages/sight-see-booking-all.html">Sight Seeings</a>-->
+<!--                                    </li>-->
+<!--                                    <li><a href="pages/event-booking-all.html">Events</a>-->
+<!--                                    </li>-->
                                 </ul>
                             </div>
                         </li>
