--- a/admin/pages/login.html
+++ b/admin/pages/login.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <a class="waves-effect waves-light btn-large btn-log-in" href="index-2.html">Login</a>
+                        <a class="waves-effect waves-light btn-large btn-log-in" href="../index.html">Login</a>
                     </div>
                 </div>
                 <a href="forgot.html" class="for-pass">Forgot Password?</a>
