--- a/Public/pages/checkout.html
+++ b/Public/pages/checkout.html
@@ -63,7 +63,7 @@
 					<div class="col-md-8 col-sm-8 col-5 col-lg-2">
 						<ul class="header__sidebar__right d-flex justify-content-end align-items-center">
 							<li class="shop_search"><a class="search__active" href="#"></a></li>
-							<li class="wishlist"><a href="wishlist.html"></a></li>
+							<li class="wishlist"><a href="wishList.html"></a></li>
 							<li class="shopcart"><a class="cartbox_active" href="#"><span class="product_qun">3</span></a>
 								<!-- Start Shopping Cart -->
 								<div class="block-minicart minicart__active">
@@ -218,7 +218,7 @@
 							<ul class="meninmenu">
 								<li><a href="../index.html">Home</a>
 								</li>
-								<li><a href="shop-grid.html">Shop</a>
+								<li><a href="shopGrid.html">Shop</a>
 								</li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
