--- a/Public/pages/cart.html
+++ b/Public/pages/cart.html
@@ -64,77 +64,77 @@
 									<div class="megamenu mega03">
 										<ul class="item item03">
 											<li class="title">Shop Layout</li>
-											<li><a href="shop-grid.html">Shop Grid</a></li>
-											<li><a href="shop-list.html">Shop List</a></li>
+											<li><a href="shopGrid.html">Shop Grid</a></li>
+											<li><a href="shopList.html">Shop List</a></li>
 											<li><a href="shop-left-sidebar.html">Shop Left Sidebar</a></li>
 											<li><a href="shop-right-sidebar.html">Shop Right Sidebar</a></li>
 											<li><a href="shop-no-sidebar.html">Shop No sidebar</a></li>
-											<li><a href="single-product.html">Single Product</a></li>
+											<li><a href="singleProduct.html">Single Product</a></li>
 										</ul>
 										<ul class="item item03">
 											<li class="title">Shop Page</li>
-											<li><a href="my-account.html">My Account</a></li>
+											<li><a href="myAccount.html">My Account</a></li>
 											<li><a href="cart.html">Cart Page</a></li>
 											<li><a href="checkout.html">Checkout Page</a></li>
-											<li><a href="wishlist.html">Wishlist Page</a></li>
+											<li><a href="wishList.html">Wishlist Page</a></li>
 											<li><a href="error404.html">404 Page</a></li>
 											<li><a href="faq.html">Faq Page</a></li>
 										</ul>
 										<ul class="item item03">
 											<li class="title">Bargain Books</li>
-											<li><a href="shop-grid.html">Bargain Bestsellers</a></li>
-											<li><a href="shop-grid.html">Activity Kits</a></li>
-											<li><a href="shop-grid.html">B&N Classics</a></li>
-											<li><a href="shop-grid.html">Books Under $5</a></li>
-											<li><a href="shop-grid.html">Bargain Books</a></li>
+											<li><a href="shopGrid.html">Bargain Bestsellers</a></li>
+											<li><a href="shopGrid.html">Activity Kits</a></li>
+											<li><a href="shopGrid.html">B&N Classics</a></li>
+											<li><a href="shopGrid.html">Books Under $5</a></li>
+											<li><a href="shopGrid.html">Bargain Books</a></li>
 										</ul>
 									</div>
 								</li>
-								<li class="drop"><a href="shop-grid.html">Books</a>
+								<li class="drop"><a href="shopGrid.html">Books</a>
 									<div class="megamenu mega03">
 										<ul class="item item03">
 											<li class="title">Categories</li>
-											<li><a href="shop-grid.html">Biography </a></li>
-											<li><a href="shop-grid.html">Business </a></li>
-											<li><a href="shop-grid.html">Cookbooks </a></li>
-											<li><a href="shop-grid.html">Health & Fitness </a></li>
-											<li><a href="shop-grid.html">History </a></li>
+											<li><a href="shopGrid.html">Biography </a></li>
+											<li><a href="shopGrid.html">Business </a></li>
+											<li><a href="shopGrid.html">Cookbooks </a></li>
+											<li><a href="shopGrid.html">Health & Fitness </a></li>
+											<li><a href="shopGrid.html">History </a></li>
 										</ul>
 										<ul class="item item03">
 											<li class="title">Favourite</li>
-											<li><a href="shop-grid.html">Mystery</a></li>
-											<li><a href="shop-grid.html">Religion & Inspiration</a></li>
-											<li><a href="shop-grid.html">Romance</a></li>
-											<li><a href="shop-grid.html">Fiction/Fantasy</a></li>
-											<li><a href="shop-grid.html">Sleeveless</a></li>
+											<li><a href="shopGrid.html">Mystery</a></li>
+											<li><a href="shopGrid.html">Religion & Inspiration</a></li>
+											<li><a href="shopGrid.html">Romance</a></li>
+											<li><a href="shopGrid.html">Fiction/Fantasy</a></li>
+											<li><a href="shopGrid.html">Sleeveless</a></li>
 										</ul>
 										<ul class="item item03">
 											<li class="title">Collections</li>
-											<li><a href="shop-grid.html">Science </a></li>
-											<li><a href="shop-grid.html">Fiction/Fantasy</a></li>
-											<li><a href="shop-grid.html">Self-Improvemen</a></li>
-											<li><a href="shop-grid.html">Home & Garden</a></li>
-											<li><a href="shop-grid.html">Humor Books</a></li>
+											<li><a href="shopGrid.html">Science </a></li>
+											<li><a href="shopGrid.html">Fiction/Fantasy</a></li>
+											<li><a href="shopGrid.html">Self-Improvemen</a></li>
+											<li><a href="shopGrid.html">Home & Garden</a></li>
+											<li><a href="shopGrid.html">Humor Books</a></li>
 										</ul>
 									</div>
 								</li>
-								<li class="drop"><a href="shop-grid.html">Kids</a>
+								<li class="drop"><a href="shopGrid.html">Kids</a>
 									<div class="megamenu mega02">
 										<ul class="item item02">
 											<li class="title">Top Collections</li>
-											<li><a href="shop-grid.html">American Girl</a></li>
-											<li><a href="shop-grid.html">Diary Wimpy Kid</a></li>
-											<li><a href="shop-grid.html">Finding Dory</a></li>
-											<li><a href="shop-grid.html">Harry Potter</a></li>
-											<li><a href="shop-grid.html">Land of Stories</a></li>
+											<li><a href="shopGrid.html">American Girl</a></li>
+											<li><a href="shopGrid.html">Diary Wimpy Kid</a></li>
+											<li><a href="shopGrid.html">Finding Dory</a></li>
+											<li><a href="shopGrid.html">Harry Potter</a></li>
+											<li><a href="shopGrid.html">Land of Stories</a></li>
 										</ul>
 										<ul class="item item02">
 											<li class="title">More For Kids</li>
-											<li><a href="shop-grid.html">B&N Educators</a></li>
-											<li><a href="shop-grid.html">B&N Kids' Club</a></li>
-											<li><a href="shop-grid.html">Kids' Music</a></li>
-											<li><a href="shop-grid.html">Toys & Games</a></li>
-											<li><a href="shop-grid.html">hoodies</a></li>
+											<li><a href="shopGrid.html">B&N Educators</a></li>
+											<li><a href="shopGrid.html">B&N Kids' Club</a></li>
+											<li><a href="shopGrid.html">Kids' Music</a></li>
+											<li><a href="shopGrid.html">Toys & Games</a></li>
+											<li><a href="shopGrid.html">hoodies</a></li>
 										</ul>
 									</div>
 								</li>
@@ -149,10 +149,10 @@
 													<li><a href="portfolio-details.html">Portfolio Details</a></li>
 												</ul>
 											</li>
-											<li><a href="my-account.html">My Account</a></li>
+											<li><a href="myAccount.html">My Account</a></li>
 											<li><a href="cart.html">Cart Page</a></li>
 											<li><a href="checkout.html">Checkout Page</a></li>
-											<li><a href="wishlist.html">Wishlist Page</a></li>
+											<li><a href="wishList.html">Wishlist Page</a></li>
 											<li><a href="error404.html">404 Page</a></li>
 											<li><a href="faq.html">Faq Page</a></li>
 											<li><a href="team.html">Team Page</a></li>
@@ -346,23 +346,23 @@
 												<li><a href="portfolio-details.html">Portfolio Details</a></li>
 											</ul>
 										</li>
-										<li><a href="my-account.html">My Account</a></li>
+										<li><a href="myAccount.html">My Account</a></li>
 										<li><a href="cart.html">Cart Page</a></li>
 										<li><a href="checkout.html">Checkout Page</a></li>
-										<li><a href="wishlist.html">Wishlist Page</a></li>
+										<li><a href="wishList.html">Wishlist Page</a></li>
 										<li><a href="error404.html">404 Page</a></li>
 										<li><a href="faq.html">Faq Page</a></li>
 										<li><a href="team.html">Team Page</a></li>
 									</ul>
 								</li>
-								<li><a href="shop-grid.html">Shop</a>
+								<li><a href="shopGrid.html">Shop</a>
 									<ul>
-										<li><a href="shop-grid.html">Shop Grid</a></li>
-										<li><a href="shop-list.html">Shop List</a></li>
+										<li><a href="shopGrid.html">Shop Grid</a></li>
+										<li><a href="shopList.html">Shop List</a></li>
 										<li><a href="shop-left-sidebar.html">Shop Left Sidebar</a></li>
 										<li><a href="shop-right-sidebar.html">Shop Right Sidebar</a></li>
 										<li><a href="shop-no-sidebar.html">Shop No sidebar</a></li>
-										<li><a href="single-product.html">Single Product</a></li>
+										<li><a href="singleProduct.html">Single Product</a></li>
 									</ul>
 								</li>
 								<li><a href="blog.html">Blog</a>
